# Ascent

./: .gitignore  AGENTS.md  CLAUDE.md  PYTHON_REPLACEMENT_ANALYSIS.md  README.md  TECHNICAL_DEBT.md  deploy_files.json  deploy_part_aa  deploy_part_ab  localhost_4174-20251116T155909.json  package-lock.json  package.json
.cursor/: mcp.json  rules.md
.cursor/plans/: game-improvements-and-bug-fixes-2e6444ec.plan.md
.github/workflows/: deploy.yml
docs/: technical-debt.md
docs/development/: android-push-and-presence-analysis.md  guidelines.md  push-notifications-analysis.md
docs/setup/: android-notifications.md  google-auth.md  supabase.md
rust-wasm/: Cargo.toml
rust-wasm/pkg/: README.md  santorini_wasm.d.ts  santorini_wasm.js  santorini_wasm.js.d.ts  santorini_wasm_bg.wasm  santorini_wasm_bg.wasm.d.ts
rust-wasm/src/: board.rs  lib.rs  mcts.rs  predictor.rs
scripts/: fix_migrations.py
shared/: santoriniEngine.ts
supabase/migrations/: 20240823120000_add_web_push_subscriptions.sql  20240910150000_add_engine_preference_to_players.sql  20240930160000_add_match_ping_events.sql  20241016103000_optimize_rls_policies.sql  20241102120000_schedule_push_subscription_cleanup.sql  20241126120000_add_coordinate_label_preference_to_players.sql  20241204120000_add_ai_matches.sql  20251120120000_add_auto_analysis_preferences.sql  (+10 more)
web/: .env  .env.example  .env.production  .prettierignore  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite-plugin-wasm-watch.ts  vite.config.ts  vitest.config.ts
web/src/: App.tsx  (+3 more)
(+105 files in other folders)
